project(realpaver)

add_library(realpaver
  rp_box.cpp
  rp_box_set.cpp
  rp_clock.cpp
  rp_constant.cpp
  rp_constraint.cpp
  rp_container.cpp
  rp_expression.cpp
  rp_expression_symbol.cpp
  rp_float.cpp
  rp_function.cpp
  rp_interval.cpp
  rp_lexer.cpp
  rp_matrix.cpp
  rp_memory.cpp
  rp_operator.cpp
  rp_operator_factory.cpp
  rp_operator_num.cpp
  rp_operator_sat.cpp
  rp_output.cpp
  rp_parser.cpp
  rp_problem.cpp
  rp_projection.cpp
  rp_propagator.cpp
  rp_solver.cpp
  rp_split.cpp
  rp_split_selector.cpp
  rp_stream.cpp
  rp_union_interval.cpp
  rp_variable.cpp
  rp_verification.cpp)
target_link_libraries(realpaver util)
