noinst_LTLIBRARIES = libproof.la

INCLUDES=$(config_includedirs) 

libproof_la_SOURCES = UFInterpolator.h UFInterpolator.C \
		      ProofGlobal.h \
		      ProofGraph.C ProofGraphRules.C ProofGraphBuild.C ProofGraph.h \
		      ProofGraphHelp.C ProofGraphCheck.C ProofGraphMain.C \
		      ProofInterpolator.C
